<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeBackActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ellipse_0"
            android:layout_width="460dp"
            android:layout_height="460dp"
            android:layout_marginStart="-32dp"
            android:layout_marginTop="522dp"
            android:background="@drawable/ellipse_2" />

        <ImageView
            android:id="@+id/ellipse_1"
            android:layout_width="wrap_content"
            android:layout_height="460dp"
            android:layout_marginStart="-215dp"
            android:layout_marginTop="269dp"
            android:background="@drawable/ellipse_2" />

    </FrameLayout>

    <Button
        android:id="@+id/return_button_2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="29dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/ellipse_4"
        >

    <ImageView
        android:id="@+id/vector_1"
        android:layout_width="16.5dp"
        android:layout_height="17.5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/vector_1" />
    </Button>

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="241dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="102dp"
        android:gravity="center_vertical"
        android:text="@string/welcome_bac"
        android:textAppearance="@style/welcome_bac" />
    <TextView
        android:id="@+id/enter_your_"
        android:layout_width="338dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="139dp"
        android:text="@string/enter_your_"
        android:textAppearance="@style/enter_your_"
        android:gravity="center_vertical"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="367dp"
        android:text="@string/username"
        android:textAppearance="@style/username"
        android:gravity="center_vertical"
        android:autofillHints="Username"
        android:inputType="text" />
    <EditText
        android:id="@+id/password"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="506dp"
        android:text="@string/password"
        android:textAppearance="@style/password"
        android:gravity="center_vertical"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="229dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="99dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="672dp"
        android:background="@drawable/rectangle_2"
        >
    <TextView
        android:id="@+id/login"
        android:layout_width="104dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="162dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="668dp"
        android:text="@string/login"
        android:textAppearance="@style/login"
        android:gravity="center_horizontal|center_vertical"
        /> </Button>
    <TextView
        android:id="@+id/forgotten_p"
        android:layout_width="160dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="134dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="744dp"
        android:text="@string/forgotten_p"
        android:textAppearance="@style/forgotten_p"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/or_create_a"
        android:layout_width="183dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="122dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="768dp"
        android:text="@string/or_create_a"
        android:textAppearance="@style/or_create_a"
        android:gravity="center_vertical"
        />

</RelativeLayout>