<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ellipse_3"
            android:layout_width="460dp"
            android:layout_height="460dp"
            android:layout_marginStart="-92dp"
            android:layout_marginTop="61dp"
            android:background="@drawable/ellipse_3" />

        <ImageView
            android:id="@+id/ellipse_5"
            android:layout_width="460dp"
            android:layout_height="460dp"
            android:layout_marginStart="93dp"
            android:layout_marginTop="312dp"
            android:layout_marginEnd="-93dp"
            android:background="@drawable/ellipse_3" />
    </FrameLayout>

    <Button
        android:id="@+id/return_button_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/ellipse_4">

    <ImageView
        android:id="@+id/vector_1"
        android:layout_width="16.5dp"
        android:layout_height="17.5dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/vector_1" />
    </Button>

    <TextView
        android:id="@+id/create_acco"
        android:layout_width="241dp"
        android:layout_height="91dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="96dp"
        android:gravity="center_vertical"
        android:text="@string/create_acco"
        android:textStyle="bold"
        android:textAppearance="@style/create_acco" />
    <EditText
        android:id="@+id/enter_email"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="39dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="236dp"
        android:text="@string/enter_email"
        android:textAppearance="@style/enter_email"
        android:gravity="center_vertical"
        android:textFontWeight="400"
        />

    <EditText
        android:id="@+id/create_user"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="360dp"
        android:gravity="center_vertical"
        android:text="@string/create_user"
        android:textAppearance="@style/create_user"
        android:textFontWeight="400"/>

    <EditText
        android:id="@+id/create_pass"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="498dp"
        android:gravity="center_vertical"
        android:text="@string/create_pass"
        android:textAppearance="@style/create_pass"
        android:textFontWeight="400" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="229dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="99dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="704dp"
        android:background="@drawable/rectangle_1"
        />
    <TextView
        android:id="@+id/sign_up"
        android:layout_width="132dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="148dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="700dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        android:gravity="center_horizontal|center_vertical"
        />
</RelativeLayout>