<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ellipse_1"
            android:layout_width="460dp"
            android:layout_height="460dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="-130dp"
            android:background="@drawable/ellipse_1" />

        <ImageView
            android:id="@+id/ellipse_0"
            android:layout_width="460dp"
            android:layout_height="460dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="214dp"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="-214dp"
            android:background="@drawable/ellipse_1" />
    </FrameLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/unsplash_sz"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="249dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:background="@drawable/unsplash_sz"
        android:src="@drawable/iamge2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/unsplash_me"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="88dp"
        android:background="@drawable/unsplash_sz"
        android:src="@drawable/image1" />


    <TextView
        android:id="@+id/let_s_get_s"
        android:layout_width="342dp"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="556dp"
        android:gravity="top"
        android:lineSpacingExtra="-16sp"
        android:text="@string/l_g_s"
        android:textAppearance="@style/let_s_get_s"
        android:textSize="75sp" />

    <TextView
        android:id="@+id/grow_togeth"
        android:layout_width="143dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="722dp"
        android:text="@string/grow_togeth"
        android:textAppearance="@style/grow_togeth"
        android:gravity="top"
        />

    <Button
        android:id="@+id/join_button"
        android:layout_width="281dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="748dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/rectangle_1"
        android:text="@string/button" />

    <TextView
        android:id="@+id/join_now"
        android:layout_width="178dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="125dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="792dp"
        android:text="@string/button"
        android:textAppearance="@style/join_now"
        android:gravity="center_vertical"
        />

</RelativeLayout>